# andr

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  plan.md
.github/workflows/: docs.yml  release-pip.yml
agent/: package.xml  setup.py
agent/agent/: agent.py  mock_skills.py  prompt_manager.py  skills.py
agent/agent/prompts/: system_prompt.py
andr/: CMakeLists.txt  package.xml
andr/action/: Wander.action
andr/config/: skill_executor_config.yaml  skills.yaml  stack.yaml
andr/include/andr/: brain.h  task.h  taskcheck.h  wander.h
andr/include/andr/skills/: go_to_nearest.h  skill.h
andr/include/andr/wander/: wander_action_server.h  wander_planner.h
andr/launch/: andr.launch.py  stack.launch.py  tools.launch.py
andr/msg/: RobotSpeech.msg
andr/src/: brain.cpp  entry.cpp  task.cpp  taskcheck.cpp  wander.cpp
andr/src/skills/: go_to_nearest.cpp
andr/src/wander/: wander_action_server.cpp  wander_planner.cpp
andr/srv/: GetPromptHistory.srv  GetSlamConfig.srv  ListTools.srv  RegisterTool.srv  SetSlamConfig.srv
andr_core/: README.md
andr_core/agent/: package.xml  setup.py
andr_core/agent/agent/: agent.py  memory.py  memory_chroma_node.py  memory_manager.py  memory_tools.py  prompt_manager.py  skills.py  tools.py
andr_core/andr_brain/: CMakeLists.txt  package.xml
andr_core/andr_brain/config/: behavior_tree.xml
andr_core/andr_brain/include/andr_brain/: brain.h  task.h  wander.h
andr_core/andr_brain/include/andr_brain/skills/: go_to_nearest.h  skill.h
andr_core/andr_brain/include/andr_brain/wander/: wander_action_server.h  wander_planner.h
andr_core/andr_brain/src/: brain.cpp  entry.cpp  task.cpp  taskcheck.cpp  wander.cpp
andr_core/andr_brain/src/skills/: go_to_nearest.cpp
andr_core/andr_brain/src/wander/: wander_action_server.cpp  wander_planner.cpp
andr_core/andr_launch/: CMakeLists.txt  package.xml
andr_core/andr_launch/config/: stack.yaml
andr_core/andr_launch/launch/: andr.launch.py  stack.launch.py  tools.launch.py
andr_core/andr_tools/: package.xml  setup.py
andr_core/andr_tools/andr_tools/: __init__.py  base_agent_tool.py  base_input_source.py  base_memory_store.py
andr_core/task_manager/: package.xml  setup.py
andr_core/task_manager/task_manager/: task_brain.py  task_manager_server.py
andr_core/tool_manager/: CMakeLists.txt  package.xml
andr_core/tool_manager/include/tool_manager/: tool_manager.h
andr_core/tool_manager/src/: tool_manager.cpp
andr_msgs/: CMakeLists.txt  package.xml
andr_msgs/action/: Agent.action  ExecuteSkill.action  TaskGoal.action
andr_msgs/msg/: Prompt.msg
andr_msgs/srv/: DeregisterTool.srv  GetAgentConfig.srv  GetMapPoints.srv  GetMapWithPoints.srv  GetMaps.srv  GetMemoryStatus.srv  GetPointCoordinates.srv  GetSystemPrompt.srv  ListMemoryStores.srv  MemoryAdd.srv  MemoryQuery.srv  QueryMemory.srv  SavePoint.srv  SetAgentConfig.srv  SetSystemPrompt.srv  StoreMemory.srv
andr_nav/: package.xml  setup.cfg  setup.py
andr_nav/andr_nav/: map_server.py  navigate_to_point_server.py  spin_server.py  walk_server.py
andr_nav/andr_nav/migrations/: 005_add_unique_point_label_per_map.sql
andr_sim/: package.xml
andr_sim/config/: ekf.yaml  nav2_params.yaml  slam_toolbox_localization_params.yaml
andr_sim/description/: gazebo_control.xacro  robot.urdf.xacro
andr_sim/launch/: robot.launch.py  robot_real.launch.py
andr_sim/worlds/: test_world.world
andr_skills/: package.xml  setup.cfg  setup.py
andr_skills/andr_skills/: gesture_server.py  speak_server.py  vision_server.py  vision_task_bridge.py
andr_tools/: package.xml  setup.cfg
andr_tools/andr_tools/: __init__.py  base_agent_tool.py  base_input_source.py
andr_ui/: package.xml  setup.cfg  setup.py
andr_ui/andr_ui/: __init__.py  __main__.py  ros_bridge.py  server.py
andr_ui/andr_ui/static/: index.html  rviz.html
andr_ui/resource/: andr_ui
docker/: entrypoint.sh
docs/: from-source.md  index.md
docs/getting-started/: first-project.md  installation.md
docs/guides/: configuration.md  inputs.md  memory.md  task-brain.md  tools.md
docs/reference/: architecture.md  cli.md  ros-interfaces.md
firmware/: ESP32_TOPICS.md
pip/andr/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  sync_runtime.sh
pip/andr/andr/: __init__.py  _setup_msgs.py  cli.py  world_resolver.py
pip/andr/andr/_libs/: __init__.py
pip/andr/andr/runtime/: __init__.py  agent  andr_ui  task_manager
pip/andr/andr/runtime/andr_sim/: __init__.py  sim.launch.py
pip/andr/andr/runtime/andr_sim/description/: robot.urdf.xacro  robot_core.xacro
pip/andr/andr/tools/: __init__.py  base_agent_tool.py  base_input_source.py
robot_skills/: package.xml  setup.py
robot_skills/robot_skills/: gesture_server.py  go_to_point_server.py  map_server.py  navigate_to_point_server.py  speak_server.py  spin_server.py  vision_server.py  vision_task_bridge.py  walk_server.py
robot_skills/robot_skills/migrations/: 002_create_maps.sql  003_create_points.sql  004_create_slam_config.sql
scripts/: build_pip.sh  start.sh
skill_executor/: CMakeLists.txt  package.xml
skill_executor/include/skill_executor/: skill_executor.h
skill_executor/src/: skill_executor.cpp
task_manager/: package.xml  setup.py
task_manager/task_manager/: task_manager_server.py
tool_manager/: CMakeLists.txt  package.xml
tool_manager/include/tool_manager/: tool_manager.h
