<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>andr_nav</name>
  <version>0.0.0</version>
  <description>Navigation and map management tools for ANDR — walk, spin, navigate_to_point, map_server.</description>
  <maintainer email="jaximus808@gmail.com">observer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>andr_msgs</depend>
  <depend>andr_tools</depend>
  <depend>nav_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>action_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
