<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_skills</name>
  <version>0.0.0</version>
  <description>Mock hardware-interface skill action servers for ANDR</description>
  <maintainer email="dev@andr.local">andr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>andr</depend>
  <depend>nav_msgs</depend>
  <depend>slam_toolbox</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
