[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "andr"
version = "0.1.0"
description = "LLM agent framework for robotics — SDK + runtime, built on ROS 2"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "jaximus808", email = "jaximus808@gmail.com"},
]
keywords = ["robotics", "ros2", "llm", "agent", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pyyaml",
    "langchain>=0.2",
    "langchain-core>=0.2",
    "langchain-ollama>=0.1",
    "langchain-openai>=0.1",
    "chromadb>=0.4",
    "sentence-transformers>=2.0",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=11.0",
]

[project.scripts]
andr = "andr.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/jaximus808/andr"
Repository = "https://github.com/jaximus808/andr"

[tool.setuptools]
packages = ["andr", "andr.tools", "andr._libs", "andr._msgs_bind",
            "andr._msgs_bind.andr_msgs", "andr._msgs_bind.andr_msgs.action",
            "andr._msgs_bind.andr_msgs.msg", "andr._msgs_bind.andr_msgs.srv",
            "andr.runtime", "andr.runtime.agent", "andr.runtime.agent.prompts",
            "andr.runtime.task_manager", "andr.runtime.andr_ui"]

[tool.setuptools.package-data]
"andr._libs" = ["*.so"]
"andr._msgs_bind.andr_msgs" = ["*.so", "*.c"]
"andr" = ["bin/tool_manager_node"]
"andr.runtime.andr_ui" = ["static/*"]
